--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="empty" id="leftBtn">Menu</button>
-            <button id="rightBtn">About Us</button>
+            <button class="empty" id="leftBtn" onclick="window.location.href='pages/menu.html'">Menu</button>
+            <button id="rightBtn" onclick="window.location.href='#about'">About Us</button>
         </div>
 
     </section>
@@ -58,7 +58,7 @@
                 <p class="desc leftBtn">Very simple cheese pizza, only for cheese enthusiasts.</p>
             </div>
             <div class="btnbuy">
-                <button class="buy leftBtn">Order Now</button>
+                <button class="buy leftBtn" onclick="window.location.href='pages/menu.html'">Order Now</button>
             </div>
         </div>
         <div class="divider">
@@ -69,7 +69,7 @@
         </div>
     </section>
 
-    <section class="aboutUs">
+    <section class="aboutUs" id="about">
         <div class="title">
             <h3 class="appearFromBottom">About Us</h3>
         </div>
@@ -88,7 +88,7 @@
         <div class="roadMap" id="roadMap">
 
             <div class="item">
-                <div class="bg" style="background-image: url(images/open.jpg); background-position: 60% center;"></div>
+                <div class="bg" style="background-image: url(images/open.webp); background-position: 60% center;"></div>
                 <div class="title">
                     <p>2025</p>
                 </div>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="bg" style="background-image: url(images/spaceMarket.jpg);"></div>
+                <div class="bg" style="background-image: url(images/spaceMarket.webp);"></div>
                 <div class="title">
                     <p>2028</p>
                 </div>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="bg" style="background-image: url(images/space.jpg);"></div>
+                <div class="bg" style="background-image: url(images/space.webp);"></div>
                 <div class="title">
                     <p>2031</p>
                 </div>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="bg" style="background-image: url(images/mars.jpg); background-position: 30% center;"></div>
+                <div class="bg" style="background-image: url(images/mars.webp); background-position: 30% center;"></div>
                 <div class="title">
                     <p>2035</p>
                 </div>
@@ -145,7 +145,7 @@
         </div>
         <div class="right">
             <div>
-                <button class="rightBtn">Order Now</button>
+                <button class="rightBtn" onclick="window.location.href='pages/menu.html'">Order Now</button>
             </div>
         </div>
     </div>
@@ -164,7 +164,7 @@
         <div class="links">
             <div>
                 <button onclick="window.location.href='#Hero'" class="rightBtn">Home</button>
-                <button onclick="window.location.href='/menu'" class="rightBtn">Menu</button>
+                <button onclick="window.location.href='pages/menu.html'" class="rightBtn">Menu</button>
             </div>
         </div>
     </footer>
