--- a/pages/menu.html
+++ b/pages/menu.html
@@ -28,7 +28,7 @@
         <div class="table">
             <div class="item">
                 <div class="pic">
-                    <div style="background-image: url(../images/cheesePizza.jpg);"></div>
+                    <div style="background-image: url(../images/cheesePizza.webp);"></div>
                 </div>
                 <div class="info">
                     <h3>Cheese Pizza</h3>
@@ -39,7 +39,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <div style="background-image: url(../images/bussin.jpg); background-size: 180%; background-position-x: 45%;"></div>
+                    <div style="background-image: url(../images/bussin.webp); background-size: 180%; background-position-x: 45%;"></div>
                 </div>
                 <div class="info">
                     <h3>Bussin Pizza</h3>
@@ -50,7 +50,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <div style="background-image: url(../images/shroomy.jpg);  background-size: 130%; background-position-y: 45%;"></div>
+                    <div style="background-image: url(../images/shroomy.webp);  background-size: 130%; background-position-y: 45%;"></div>
                 </div>
                 <div class="info">
                     <h3>Shroomy Pizza</h3>
@@ -61,7 +61,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <div style="background-image: url(../images/peperonish.jpg);"></div>
+                    <div style="background-image: url(../images/peperonish.webp);"></div>
                 </div>
                 <div class="info">
                     <h3>Peperonish Pizza</h3>
@@ -72,7 +72,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <div style="background-image: url(../images/veggy.jpg); background-size: 150%; background-position-x: 70%;"></div>
+                    <div style="background-image: url(../images/veggy.webp); background-size: 150%; background-position-x: 70%;"></div>
                 </div>
                 <div class="info">
                     <h3>Veggy Pizza</h3>
@@ -83,7 +83,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <div style="background-image: url(../images/bbq.jpg); background-position-x: 0%;"></div>
+                    <div style="background-image: url(../images/bbq.webp); background-position-x: 0%;"></div>
                 </div>
                 <div class="info">
                     <h3>BBQ pizza</h3>
