--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <h3 class="appearFromBottom">How about a bite?</h3>
             </div>
             <div>
-                <p style="text-align: center;" class="leftBtn">Order our marvelous pizza now &nbsp; <br class="mobile"> <i class="arrowR"></i></p>
+                <p class="leftBtn">Order our marvelous pizza now &nbsp; <br class="mobile"> <i class="arrowR"></i></p>
             </div>
         </div>
         <div class="right">
