--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
     <script src="script.js" defer></script>
+    <link rel="icon" href="images/pizzaLogo.webp">
 </head>
 
 <body>
