--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header id="header">
         <div class="logo"> <div onclick="window.location.href='#Hero'"></div> </div>
-        <div class="title"> <h2 onclick="window.location.href='#Hero'">Space Pizza</h2> </div>
+        <div class="title"> <a href="#Hero">Space Pizza</a> </div>
         <nav>
             <a href="#Hero" class="this">Home</a>
             <a href="pages/menu.html">Menu</a>
@@ -26,11 +26,12 @@
 
     <section class="hero" id="Hero">
 
-        <div class="heroBgVideo">
-            <iframe
+        <div class="heroBgVideo" tabindex="-1">
+            <!-- <iframe
                 src="https://www.youtube.com/embed/5r4h_4jscDU?controls=0&autoplay=1&mute=1&playlist=5r4h_4jscDU&loop=1"
-                width="1920" height="1080" allow="modestbranding; autoplay;" frameborder="0">Damn it, update your
-                browser!</iframe>
+                width="1920" height="1080" allow="modestbranding; autoplay;" frameborder="0" tabindex="-1">Damn it, update your
+                browser!</iframe> -->
+            <div id="player"></div>
         </div>
 
         <div class="text">
@@ -75,8 +76,8 @@
             <h3 class="appearFromBottom">About Us</h3>
         </div>
         <div class="content">
-            <p class="appearFromBottom">We are a pizza network, that has pizzerias all over the world(Earth) and in space! Space pizzeria is in the Alpha station, Space Market area 42. Delicious pizzas, amazing salads, pure drinks and juicy steaks, everything here, in the Space Pizza with affordable prices and world-wide delivery, delivery to moon, delivery to Mars coming soon... <br>
-                You can learn about us and our story here:
+            <p class="appearFromBottom">We are a pizza network, that has pizzerias all over the world(Earth) and in space! Space pizzeria is in the Alpha station, Space Market area 42. Delicious pizzas, amazing salads, pure drinks and juicy steaks, everything here, in the Space Pizza with affordable prices and world-wide delivery, delivery to moon, delivery to Mars coming soon... <br> <br>
+                You can learn more about us and our story here:
             </p>
             <p><i class="arrow appearDown"></i></p>
         </div>
@@ -88,7 +89,7 @@
         </div>
         <div class="roadMap" id="roadMap">
 
-            <div class="item">
+            <div class="item" tabindex="0">
                 <div class="bg" style="background-image: url(images/open.webp); background-position: 60% center;"></div>
                 <div class="title">
                     <p>2025</p>
@@ -99,7 +100,7 @@
                         of new customers!</p>
                 </div>
             </div>
-            <div class="item">
+            <div class="item" tabindex="0">
                 <div class="bg" style="background-image: url(images/spaceMarket.webp);"></div>
                 <div class="title">
                     <p>2028</p>
@@ -110,7 +111,7 @@
                         space pizzeria in the world! You can find us in the Space Market (launched in 2024)</p>
                 </div>
             </div>
-            <div class="item">
+            <div class="item" tabindex="0">
                 <div class="bg" style="background-image: url(images/space.webp);"></div>
                 <div class="title">
                     <p>2031</p>
@@ -121,7 +122,7 @@
                         doesn't matter when you order.</p>
                 </div>
             </div>
-            <div class="item">
+            <div class="item" tabindex="0">
                 <div class="bg" style="background-image: url(images/mars.webp); background-position: 30% center;"></div>
                 <div class="title">
                     <p>2035</p>
