--- a/pages/menu.html
+++ b/pages/menu.html
@@ -15,7 +15,7 @@
     
     <header id="header">
         <div class="logo"> <div onclick="window.location.href='../index.html'"></div> </div>
-        <div class="title"> <h2 onclick="window.location.href='../index.html'">Space Pizza</h2> </div>
+        <div class="title"> <a href="../index.html">Space Pizza</a> </div>
         <nav>
             <a href="../index.html">Home</a>
             <a href="#Hero" class="this">Menu</a>
